udemy bankify exercises code fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
 </header>
-<div class="main-container hidden" >
+<div class="main-container" >
 
     <div class="withdraw-container col-6" >
         <div class="current-balance">
@@ -42,7 +42,7 @@
         <div class="transfer-money" >
             <h3>Transfer money</h3>
             <form class="form" >
-                <input >
+                <input class="transfer-input-name" >
                 <input class="transfer-input" >
                 <button class="transfer-money-button"><img class="right-arrow" src="right-arrow.png" ></button>
                 <label>Tranfer to</label>
@@ -60,9 +60,9 @@
         <div class="close-account" >
             <h3>Close account</h3>
             <form class="form" >
-                <input >
-                <input >
-                <button><img class="right-arrow" src="right-arrow.png" ></button>
+                <input class="close-input-user" >
+                <input class="close-input-pin">
+                <button class="close-account-button" ><img class="right-arrow" src="right-arrow.png" ></button>
                 <label>Confirm user</label>
                 <label>Confirm PIN</label>
             </form>
